objects/Staging_Property__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Description__c</fullName>
        <label>Asset Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Make_Description__c</fullName>
        <label>Asset Make Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Model_Description__c</fullName>
        <label>Asset Model Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Number__c</fullName>
        <label>Change Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Deregistration_Date__c</fullName>
        <label>DWH: Deregistration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Instance__c</fullName>
        <label>DWH: Instance</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Prop_Type_Description__c</fullName>
        <label>DWH:Prop Type Description</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Registration_Date__c</fullName>
        <label>DWH: Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Source_System__c</fullName>
        <label>DWH: Source System</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Description__c</fullName>
        <label>Engine Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourable_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favourable Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_value__c</fullName>
        <label>Land value</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoanSurrogateExternalID__c</fullName>
        <label>LoanSurrogateExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Variant_Type__c</fullName>
        <label>Model Variant Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NG_SecurityID__c</fullName>
        <label>NG SecurityID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OccupancyType__c</fullName>
        <label>OccupancyType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy_Rank__c</fullName>
        <label>Occupancy Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy_Type_Description__c</fullName>
        <label>Occupancy Type Description</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Reading_Number__c</fullName>
        <label>Odometer Reading Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPSR_Registration_End_Time__c</fullName>
        <label>PPSR Registration End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PPSR_Registration_Number__c</fullName>
        <label>PPSR Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_Description__c</fullName>
        <label>Property Address Description</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Property External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID_Type__c</fullName>
        <label>Property ID Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <label>Property ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Number__c</fullName>
        <label>Property Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_PostCode__c</fullName>
        <label>Property PostCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <label>Property Street</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Suburb_Town__c</fullName>
        <label>Property Suburb/Town</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Title__c</fullName>
        <label>Property Title</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Unit_House_Number__c</fullName>
        <label>Property Unit/House Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Year__c</fullName>
        <label>Release Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Description__c</fullName>
        <label>Title Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Name__c</fullName>
        <label>Title Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Status__c</fullName>
        <label>Title Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_asset_Cost__c</fullName>
        <label>Total asset Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIN_Number__c</fullName>
        <label>VIN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Amount__c</fullName>
        <label>Valuation Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Body_Description__c</fullName>
        <label>Vehicle Body Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_Number__c</fullName>
        <label>Vehicle Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Subtype_Description__c</fullName>
        <label>Vehicle Sub-type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type_Description__c</fullName>
        <label>Vehicle Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Staging Property</label>
    <nameField>
        <label>Staging Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>